--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "ember-load-initializers": "^2.1.2",
     "ember-local-storage": "git+https://github.com/wozny1989/ember-local-storage#50c87a4ce04892245e6d7a47bbd3f22cae560235",
     "ember-modal-dialog": "^4.0.1",
+    "ember-moment": "^10.0.0",
     "ember-page-title": "^7.0.0",
+    "ember-pikaday": "^4.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-source": "~4.3.0",
@@ -71,5 +73,10 @@
   },
   "ember": {
     "edition": "octane"
-  }
+  },
+
+"dependencies": {
+  "moment": "^2.29.3",
+  "moment-timezone": "^0.5.34"
+}
 }
