--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-moment": "^10.0.0",
     "ember-page-title": "^7.0.0",
     "ember-pikaday": "^4.0.0",
+    "ember-power-select": "^5.0.4",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-source": "~4.3.0",
@@ -74,9 +75,8 @@
   "ember": {
     "edition": "octane"
   },
-
-"dependencies": {
-  "moment": "^2.29.3",
-  "moment-timezone": "^0.5.34"
-}
+  "dependencies": {
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34"
+  }
 }
