fix test part 2

--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "bootstrap": "^5.1.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.4.1",
-    "ember-cli": "^3.12.1",
+    "ember-cli": "~4.3.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-mirage": "~2.1.0",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
@@ -44,7 +45,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-local-storage": "git+https://github.com/wozny1989/ember-local-storage#50c87a4ce04892245e6d7a47bbd3f22cae560235",
+    "ember-local-storage": "^2.0.2",
     "ember-modal-dialog": "^4.0.1",
     "ember-moment": "^10.0.0",
     "ember-page-title": "^7.0.0",
