--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "edition": "octane"
   },
   "dependencies": {
+    "auth0-lock": "^11.33.2",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34"
   }
